[package]
name = "rustor"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = "0.6.3"
crossterm = "0.28.1"
directories = "5.0.1"
lazy_static = "1.5.0"
log = "0.4.22"
pistol = "3.1.5"
platforms = "3.5.0"
pnet = "0.35.0"
ratatui = "0.28.1"
rustscan = "2.3.0"
sysinfo = "0.32.0"
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tui-logger = "0.13.2"
